privacy confirmation hook added addressbook label field to 60 rows

--- a/trunk/lnx.milanin.com/egroupware/egroupware/phpgwapi/setup/phpgw_en.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/phpgwapi/setup/phpgw_en.lang
@@ -314,6 +314,7 @@ htmlarea cowardly refuses to delete the last cell in row.	htmlarea-TableOperatio
 htmlarea cowardly refuses to delete the last column in table.	htmlarea-TableOperations	en	HTMLArea cowardly refuses to delete the last column in table.
 htmlarea cowardly refuses to delete the last row in table.	htmlarea-TableOperations	en	HTMLArea cowardly refuses to delete the last row in table.
 hungary	common	en	HUNGARY
+i agree	common	en	I agree
 i will open it in a new page.	htmlarea-SpellChecker	en	I will open it in a new page.
 i_nsert row before	htmlarea-ContextMenu	en	I_nsert Row Before
 iceland	common	en	ICELAND
@@ -763,6 +764,7 @@ yes	common	en	Yes
 you are in text mode.  use the [<>] button to switch back to wysiwig.	htmlarea	en	You are in TEXT MODE.  Use the [<>] button to switch back to WYSIWIG.
 you are required to change your password during your first login	common	en	You are required to change your password during your first login
 you are running a newer version of phpgroupware than your database is setup for	common	en	You are running a newer version of phpGroupWare than your database is setup for.
+you did not yet agree with the privacy policy	common en	You did not yet agree with the privacy policy
 you have been successfully logged out	login	en	You have been successfully logged out
 you have not entered a title	common	en	You have not entered a title
 you have not entered a valid date	common	en	You have not entered a valid date
