added a method to get list of accounts with elgg profiles attached added some strings in the elgg lang file added a sidebox hook in the setup file added admin app based classes into elgg inc removed all the admin code, only browsers for groups and accounts are left added templates for browsers

--- a/trunk/lnx.milanin.com/egroupware/egroupware/elgg-link/setup/phpgw_en.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/elgg-link/setup/phpgw_en.lang
@@ -1,1 +1,4 @@
-Anonymous	elgg-link	en	Anonymous
+anonymous	elgg-link	en	Anonymous
+linkedin id	elgg-link	en	LinkedIn ID
+members	elgg-link	en	Members
+membership_date	elgg-link	en	Member Since
