Converted to ISO-8859-1

--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_it.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_it.lang
@@ -2,7 +2,7 @@ Personal data	sitemgr	it	Dati personali
 Club data	sitemgr	it	Dati del club
 Club name	sitemgr	it	Il nome del Club che vuoi segnalare
 Club address	sitemgr	it	Il sito del Club che vuoi segnalare
-Club description	sitemgr	it	Descrizione delle attivit√† del Club
+Club description	sitemgr	it	Descrizione delle attivit‡ del Club
 How did you know about the club	sitemgr	it	Come hai conosciuto questa iniziativa?
 recommend a club	sitemgr	it	Segnala un club
 his module lets visitors to submit a club	sitemgr	it	Questo modulo permette a visitatori segnalare un club
@@ -10,13 +10,13 @@ Where to send recommendation	sitemgr	it	Lista di indirizzi e-mail dove inviare l
 how_did_u	sitemgr	it	Lista di opzioni per la domanda "Come hai saputo"
 you must fill in all of the required fields	sitemgr	it	Bisogna compilare tutti i campi obligatori
 you have entered an invalid email address	sitemgr	it	Hai digitato indirizzo e-mail non valido
-too short name	sitemgr	it	Il nome √® tropo scorto
-too short club name	sitemgr	it	Il nome di club √® tropo scorto
-too short description	sitemgr	it	La descrizione di club √® tropo scorta
-too short address	sitemgr	it	L'indirizzo di sito web √® tropo scorto
+too short name	sitemgr	it	Il nome Ë tropo scorto
+too short club name	sitemgr	it	Il nome di club Ë tropo scorto
+too short description	sitemgr	it	La descrizione di club Ë tropo scorta
+too short address	sitemgr	it	L'indirizzo di sito web Ë tropo scorto
 There was a problem sending this mail!	sitemgr	it	E' stata scoperta una problema durante l'invio della segnalazione
 Recommendation is accepted		sitemgr	it	Grazie per avere partecipato alll'iniziativa "Non solo Milan IN"
-Thank you for your recommendation	sitemgr	it	Grazie per avere partecipato alll'iniziativa "Non solo Milan IN"\nLa tua segnalazione verr√† vagliata dal CD del Club e pubblicata prima possibile.\n\nA presto!\nB.C. Milan IN - Segreteria\n
+Thank you for your recommendation	sitemgr	it	Grazie per avere partecipato alll'iniziativa "Non solo Milan IN"\nLa tua segnalazione verr‡ vagliata dal CD del Club e pubblicata prima possibile.\n\nA presto!\nB.C. Milan IN - Segreteria\n
 There was a problem sending mail to	sitemgr	it	E' stata scoperta una problema durante l'invio e-mail a
 your name	sitemgr	it	Il tuo Nome
 your phone number	sitemgr	it	Il tuo numero telefonico
