Added also to sitemgr translation files

--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_en.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_en.lang
@@ -470,3 +470,6 @@ I know somebody who's a member of it	sitemgr	en	 I know somebody who's a member 
 Just know about it	sitemgr	en	 Just know about it
 Social Networking Directory	sitemgr	en	 Found it on the Internet
 required fields	sitemgr	en	Required fields
+permanent link	news_admin	en	Permanent link
+home page	news_admin	en	Home page
+
