--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_it.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_it.lang
@@ -26,3 +26,5 @@ I know somebody who's a member of it	sitemgr	it	 Conosco qualcuno che ne fa part
 Just know about it	sitemgr	it	 Lo conosco, semplicemente
 Social Networking Directory	sitemgr	it	 L'ho trovato su internet
 required fields	sitemgr	it	Campi obligatori
+permanent link	news_admin	it	Link permanente
+home page	news_admin	it	Home page
