Added "Local Events Area" related phrases

--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_en.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_en.lang
@@ -472,4 +472,9 @@ Social Networking Directory	sitemgr	en	 Found it on the Internet
 required fields	sitemgr	en	Required fields
 permanent link	news_admin	en	Permanent link
 home page	news_admin	en	Home page
-
+Local events area	sitemgr	en	Local events area
+Milan	sitemgr	en	Milan
+Italy	sitemgr	en	Italy
+The whole world	sitemgr	en	The whole world
+On-line ONLY	sitemgr	en	On-line ONLY
+Local events areas	sitemgr	en	List of the options for areas of local events
