--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_it.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_it.lang
@@ -28,3 +28,9 @@ Social Networking Directory	sitemgr	it	 L'ho trovato su internet
 required fields	sitemgr	it	Campi obligatori
 permanent link	news_admin	it	Link permanente
 home page	news_admin	it	Home page
+Local events area	sitemgr	it	Area di frequentazione
+Milan	sitemgr	it	Milano
+Italy	sitemgr	it	Italia
+The whole world	sitemgr	it	Tutto il mondo
+On-line ONLY	sitemgr	it	SOLO On-line
+Local events areas list	sitemgr	it	Lista di opzioni per la area di frequentazione
